# igyne

./: CMakeLists.txt  qSlicerIgyneModule.cxx  qSlicerIgyneModule.h  qSlicerIgyneModuleWidget.cxx  qSlicerIgyneModuleWidget.h  qTemplateSheetWidget.cxx  qTemplateSheetWidget.h  readme
Documentation/: Igyne.dox
Libs/: vtkBioeng.lib  vtkBioengConfigure.h  vtkCollisionDetectionFilter.h
Logic/: CMakeLists.txt  vtkSlicerIgyneLogic.cxx  vtkSlicerIgyneLogic.h
Resources/: qSlicerIgyneModule.qrc
Resources/UI/: qSlicerIgyneModule - back.ui  qSlicerIgyneModule.ui  qSlicerIgyneModule1.ui  qSlicerIgyneModule2.ui  qSpinBoxDepthWidget.ui  qTemplateSheetWidget.ui
Testing/: CMakeLists.txt
Testing/Cxx/: CMakeLists.txt
Widgets/: qSlicerFooBarWidget.cxx  qSlicerFooBarWidget.h
scene for template and obturator/: Template.mrml
